21.apr (ws)
      use QDesktopServices::storageLocation to set default working directory to
      "DocumentsLocation"
19.apr (ws)
      - note entry mode: modified chord entry, prev-chord, next-chord
      - fix default stem direction in multi voice context
      (db)
      - added soprano cornet, treble clef euphonium, baritone, and treble clef baritone
        to English instruments list
      - updates to handbook using latest SVN version of pisa. Support for inline images 
        now possible (see voices and beams pages)
      - update Norwegian translation by daghenningsorbo
12.apr (ws)
      - fix note stem direction of beamed notes if notes are above and below the beam
      - add new demo "praeludium2.mscx" (J.S.Bach WTC I)
11.apr (ws)
      - add "Search" to edit menu
      - dont extend top/bottom ledger line for chords with displaced note heads
        (layout enhancement)
      - fix displaced notehead (visible in italian-1.mscx bar 34)
      (la)
      - enable paste of chord names on rest
      - fix export of dominant chord in musicXML
      - add ability to color notehead from plugins
10.apr (ws)
      - reduce stem len of beamed grace notes
      - fix: ties do not work via note entry with mouse
      - pitch up/down for drum does not change pitch but change to next/prev
        instrument in drumset
      - disable dragging of drum note heads
      - fix: freeze when double click in drum palette
9.apr (ws)
      - fix shortcut for flat
8.apr (ws)
      - fix problem with special characters(&<>\") in filename for compressed files
      - make changing of playback instrument undoable, this also sets the dirty
        flag for the score to ensure the changed score is saved
      (tb)
      - update Portuguese translation and instruments by José Luciano Batista Gomes
      - update Dutch translation by Jaap Plaisier
7.apr (ws)
      - added two new clefs, reordered clef list
      - make saved files readable by all